--- a/Virus/Virus.csproj
+++ b/Virus/Virus.csproj
@@ -42,6 +42,11 @@
     <Compile Include="Agents\Agent.cs" />
     <Compile Include="Agents\QAgents\Advanced\QAgentAdvanced.cs" />
     <Compile Include="Agents\QAgents\Advanced\QAgentAdvanced.Parameters.cs" />
+    <Compile Include="Agents\QAgents\MemoryQAgent\MemoryQAgent.cs" />
+    <Compile Include="Agents\QAgents\MemoryQAgent\MemoryQAgent.Learning.cs" />
+    <Compile Include="Agents\QAgents\MemoryQAgent\MemoryQAgent.Parameters.cs" />
+    <Compile Include="Agents\QAgents\MemoryQAgent\MemoryQAgent.Utility.cs" />
+    <Compile Include="Agents\QAgents\MemoryQAgent\VirusMemory.cs" />
     <Compile Include="Agents\QAgents\Original\QAgent.cs" />
     <Compile Include="Agents\SearchAgents\MinimaxAgent.cs" />
     <Compile Include="Agents\SearchAgents\MiniMaxMixAgent.cs" />
