Refactored testing class

--- a/VirusConsole/VirusConsole.csproj
+++ b/VirusConsole/VirusConsole.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="Program.InitialMemQTests.cs" />
+    <Compile Include="Program.OldTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
