--- a/Virus/Virus.csproj
+++ b/Virus/Virus.csproj
@@ -73,6 +73,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DaxCore.dll" />
     <Content Include="Nea.dll" />
     <Content Include="Nea.XML" />
   </ItemGroup>
